# marathon_rust_lib

./: .gitignore  Cargo.toml  README.md
pastcontest/: 2hc2020a.rs  2hc2020b.rs  httf2021pre.rs  rco4_pre_a.rs
src/: algorithm.rs  data_structure.rs  lib.rs  machine_learning.rs  util.rs
src/algorithm/: a_star.rs  binarysearch.rs  sat.rs  satmemo
src/data_structure/: disjoint_set.rs  fenwick_tree.rs
src/machine_learning/: decision_tree.rs  linear_regression.rs  logistic_regression.rs  ml_util.rs  neural_network.rs
src/templete/: localsearch.rs  vec2d_swap.rs
src/util/: interactive_io.rs  number.rs  procon_io.rs  timer.rs  xorshift.rs
