[package]
name = "library"
version = "0.1.0"
authors = ["taka"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.1"
num-traits = "0.2.11"
ndarray = "0.13.0"
rand = { version = "0.7.3", features = ["small_rng"] }
rand_pcg = "0.2.1"
